tests/paczka1/small_fuzzy/17048272.err
Error in line 4: QLyHAFqs S119 39,9
Error in line 10: SsOu69FYVEs A88 -1,4
Error in line 5: QLyHAFqs S649 37,9
